test/invalid-syntax/sit/no-much.djs
classy Foo
	sit name
	wow
wow
